--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
         "client/**/*.ts",
         "test/**/*.ts",
         "typings/tsd.d.ts",
-        "!./node_modules/**/*.ts"
+        "!./node_modules/**/*.ts",
+        "common/**/*.ts"
     ]
 }
