--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "fuse:preview:ios": "cd dist/${TARGET-app}/${MODE-dev} && fuse preview --target=iOS",
     "fuse:preview:android": "cd dist/${TARGET-app}/${MODE-dev} && fuse preview --target=Android",
     "postinstall": "tsd install",
-    "server":"ts-node server/main"
+    "server": "ts-node server/main",
+    "mongo:create":"docker run -d -p 27017:27017 -p 28017:28017 --name mongodb tutum/mongodb",
+    "mongo:start":"docker start mongodb",
+    "mongo:stop":"docker stop mongodb"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.8",
@@ -49,6 +52,7 @@
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
     "lodash": "^4.0.1",
+    "mongoose": "^4.4.14",
     "parse5": "1.4.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
