feat(back & front): add kml endpoint and google-map webcomponent

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "paper-elements": "PolymerElements/paper-elements#^1.0.7"
+    "paper-elements": "PolymerElements/paper-elements#^1.0.7",
+    "google-map": "GoogleWebComponents/google-map#^1.1.10"
   }
 }
