--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "fuse:preview:ios": "cd dist/${TARGET-app}/${MODE-dev} && fuse preview --target=iOS",
     "fuse:preview:android": "cd dist/${TARGET-app}/${MODE-dev} && fuse preview --target=Android",
     "postinstall": "tsd install",
-    "server":"ts-node server/main"
+    "server": "ts-node server/main"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.8",
@@ -45,6 +45,7 @@
     "es6-shim": "0.33.13",
     "es7-reflect-metadata": "1.4.0",
     "express": "^4.13.4",
+    "firebase": "^3.0.2",
     "ionic-angular": "2.0.0-beta.3",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
@@ -79,6 +80,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
+    "mongodb": "^2.1.19",
     "ngux-loader": "mcfly-io/ngux-loader",
     "node-sass": "^3.4.2",
     "phantomjs-polyfill": "0.0.2",
