--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "dependencies": {
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
+    "@angular/common": "2.0.0-rc.2",
+    "@angular/compiler": "2.0.0-rc.2",
+    "@angular/core": "2.0.0-rc.2",
+    "@angular/http": "2.0.0-rc.2",
+    "@angular/platform-browser": "2.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
+    "@angular/router": "3.0.0-alpha.7",
+    "@angular2-material/core": "^2.0.0-alpha.5-2",
+    "@angular2-material/list": "^2.0.0-alpha.5-2",
+    "@angular2-material/tabs": "^2.0.0-alpha.5-2",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.5-2",
+    "angularfire2": "2.0.0-beta.0",
     "es6-promise": "^3.0.2",
-    "reflect-metadata": "0.1.2"
+    "firebase": "^2.4.2",
+    "leaflet": "^0.7.7",
+    "moment": "^2.13.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.2",
@@ -23,6 +32,7 @@
     "eslint-config-xo-space": "^0.12.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-babel": "^3.1.0",
+    "file-loader": "^0.8.5",
     "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
     "gulp-filter": "^4.0.0",
     "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
