--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "dependencies": {
-    "@angular/common": "2.0.0-rc.2",
-    "@angular/compiler": "2.0.0-rc.2",
-    "@angular/core": "2.0.0-rc.2",
-    "@angular/http": "2.0.0-rc.2",
-    "@angular/platform-browser": "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
-    "@angular/router": "3.0.0-alpha.7",
-    "@angular2-material/core": "^2.0.0-alpha.5-2",
-    "@angular2-material/list": "^2.0.0-alpha.5-2",
-    "@angular2-material/tabs": "^2.0.0-alpha.5-2",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.5-2",
-    "angularfire2": "2.0.0-beta.0",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.2",
+    "@angular2-material/core": "^2.0.0-alpha.6",
+    "@angular2-material/list": "^2.0.0-alpha.6",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.6",
+    "@angular2-material/tabs": "^2.0.0-alpha.6",
+    "angular": "^1.5.7",
+    "angularfire2": "^2.0.0-beta.2",
     "es6-promise": "^3.0.2",
-    "firebase": "^2.4.2",
+    "es6-shim": "^0.35.0",
+    "firebase": "^3.2.0",
     "leaflet": "^0.7.7",
-    "moment": "^2.13.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.6",
+    "leaflet-omnivore": "^0.3.2",
+    "moment": "^2.14.1",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.8",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
@@ -25,19 +28,22 @@
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.0",
     "browser-sync": "^2.9.11",
+    "browser-sync-spa": "^1.0.3",
     "css-loader": "^0.23.1",
     "del": "^2.0.2",
     "es6-shim": "^0.35.0",
-    "eslint": "^2.4.0",
+    "eslint": "^2.11.0",
     "eslint-config-xo-space": "^0.12.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-babel": "^3.1.0",
-    "file-loader": "^0.8.5",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
     "gulp-filter": "^4.0.0",
     "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
     "gulp-sass": "^2.1.1",
     "gulp-util": "^3.0.7",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.9.0",
     "isparta-loader": "^2.0.0",
     "jasmine": "^2.4.1",
@@ -55,9 +61,10 @@
     "ts-loader": "^0.7.2",
     "tslint": "^3.2.1",
     "tslint-loader": "^2.1.0",
-    "typescript": "^1.7.5",
-    "typings": "^0.8.1",
-    "webpack": "^1.13.1"
+    "typescript": "^1.8.10",
+    "typings": "^1.0.4",
+    "webpack": "2.1.0-beta.8",
+    "webpack-split-by-path": "^0.0.10"
   },
   "scripts": {
     "build": "gulp",
