--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
-    "@angular2-material/core": "^2.0.0-alpha.6",
-    "@angular2-material/list": "^2.0.0-alpha.6",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.6",
-    "@angular2-material/tabs": "^2.0.0-alpha.6",
     "angular": "^1.5.7",
     "angularfire2": "^2.0.0-beta.2",
     "es6-promise": "^3.0.2",
@@ -18,9 +14,11 @@
     "firebase": "^3.2.0",
     "leaflet": "^0.7.7",
     "leaflet-omnivore": "^0.3.2",
+    "material-design-icons": "^2.2.3",
+    "material-design-lite": "^1.1.3",
     "moment": "^2.14.1",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.8",
+    "rxjs": "^5.0.0-beta.10",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
