--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "leaflet-omnivore": "^0.3.2",
     "material-design-icons": "^2.2.3",
     "material-design-lite": "^1.1.3",
+    "mdi": "^1.6.50",
     "moment": "^2.14.1",
     "reflect-metadata": "0.1.3",
-    "rxjs": "^5.0.0-beta.10",
+    "rxjs": "^5.0.0-beta.11",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
