refactor(project): upgrade to angular2-rc5, create modules and login screen squeletton
fix(all): fix authentication + fix MDL

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "!typings/**",
-    "!node_modules/**"
+    "!node_modules/**",
+    "!dist/**/*.ts"
   ]
 }
