--- a/package.json
+++ b/package.json
@@ -11,67 +11,70 @@
   "homepage": "https://github.com/angularclass/angular2-webpack-starter",
   "license": "MIT",
   "scripts": {
-    "rimraf": "rimraf",
-    "tslint": "tslint",
-    "typedoc": "typedoc",
-    "webpack": "webpack",
-    "webpack-dev-server": "webpack-dev-server",
-    "webdriver-manager": "webdriver-manager",
-    "protractor": "protractor",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
-    "clean:dist": "npm run rimraf -- dist",
-    "preclean:install": "npm run clean",
-    "clean:install": "npm set progress=false && npm install",
-    "preclean:start": "npm run clean",
-    "clean:start": "npm start",
-    "watch": "npm run watch:dev",
-    "watch:dev": "npm run build:dev -- --watch",
-    "watch:dev:hmr": "npm run watch:dev -- --hot",
-    "watch:test": "npm run test -- --auto-watch --no-single-run",
-    "watch:prod": "npm run build:prod -- --watch",
-    "build": "npm run build:dev",
-    "prebuild:dev": "npm run clean:dist",
     "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
-    "prebuild:prod": "npm run clean:dist",
+    "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
     "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
-    "github-deploy": "npm run github-deploy:dev",
+    "build": "npm run build:dev",
+    "ci": "npm run lint && npm test && npm run e2e",
+    "clean:dist": "npm run rimraf -- dist",
+    "clean:install": "npm set progress=false && npm install",
+    "clean:start": "npm start",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
+    "docker": "docker",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+    "e2e:live": "npm run e2e -- --elementExplorer",
+    "e2e": "npm run protractor",
     "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
     "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
-    "server": "npm run server:dev",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:prod": "http-server dist --cors",
-    "webdriver:update": "npm run webdriver-manager update",
-    "webdriver:start": "npm run webdriver-manager start",
+    "github-deploy": "npm run github-deploy:dev",
     "lint": "npm run tslint \"src/**/*.ts\"",
+    "postversion": "git push && git push --tags",
+    "prebuild:dev": "npm run clean:dist",
+    "prebuild:prod": "npm run clean:dist",
+    "preclean:install": "npm run clean",
+    "preclean:start": "npm run clean",
     "pree2e": "npm run webdriver:update -- --standalone",
-    "e2e": "npm run protractor",
-    "e2e:live": "npm run e2e -- --elementExplorer",
-    "test": "karma start",
-    "ci": "npm run lint && npm test && npm run e2e",
-    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
-    "start": "npm run server:dev",
-    "start:hmr": "npm run server:dev:hmr",
     "preversion": "npm test",
+    "protractor": "protractor",
+    "rimraf": "rimraf",
+    "server:dev:hmr": "npm run server:dev -- --inline --hot",
+    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
+    "server:prod": "http-server dist --cors",
+    "server": "npm run server:dev",
+    "start:hmr": "npm run server:dev:hmr",
+    "start": "npm run server:dev",
+    "test": "karma start",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
     "version": "npm run build",
-    "postversion": "git push && git push --tags"
+    "watch:dev:hmr": "npm run watch:dev -- --hot",
+    "watch:dev": "npm run build:dev -- --watch",
+    "watch:prod": "npm run build:prod -- --watch",
+    "watch:test": "npm run test -- --auto-watch --no-single-run",
+    "watch": "npm run watch:dev",
+    "webdriver-manager": "webdriver-manager",
+    "webdriver:start": "npm run webdriver-manager start",
+    "webdriver:update": "npm run webdriver-manager update",
+    "webpack-dev-server": "webpack-dev-server",
+    "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "^2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/platform-server": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
+    "@angular/router": "3.0.0",
     "@angularclass/conventions-loader": "^1.0.2",
-    "@angularclass/hmr": "^1.0.1",
-    "@angularclass/hmr-loader": "^1.0.1",
+    "@angularclass/hmr": "~1.2.0",
+    "@angularclass/hmr-loader": "~3.0.2",
     "@angularclass/request-idle-callback": "^1.0.7",
     "@angularclass/webpack-toolkit": "^1.3.3",
-    "angularfire2": "^2.0.0-beta.4",
+    "angularfire2": "^2.0.0-beta.5",
+    "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
@@ -81,7 +84,7 @@
     "material-design-lite": "^1.2.0",
     "mdi": "^1.7.22",
     "moment": "^2.14.1",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.17"
   },
   "devDependencies": {
@@ -99,7 +102,7 @@
     "awesome-typescript-loader": "^2.2.1",
     "codelyzer": "~0.0.28",
     "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.24.0",
+    "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
@@ -125,14 +128,14 @@
     "rimraf": "^2.5.2",
     "sass-loader": "^4.0.1",
     "source-map-loader": "^0.1.5",
-    "string-replace-loader": "^1.0.3",
+    "string-replace-loader": "github:gdi2290/string-replace-loader",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.1",
     "ts-node": "^1.3.0",
-    "tslint": "3.15.0-dev.0",
+    "tslint": "3.15.1",
     "tslint-loader": "^2.1.3",
-    "typedoc": "^0.4.4",
+    "typedoc": "^0.4.5",
     "typescript": "2.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.21",
