--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,7 @@
   },
   "exclude": [
     "node_modules",
-    "dist",
-    "old"
+    "dist"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
