chore(project): upgrade to angular2-webpack-starter 5.1.1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "noEmitHelpers": true,
     "strictNullChecks": false,
     "baseUrl": "./src",
-    "paths": [
-    ],
+    "paths": {
+    },
     "lib": [
       "dom",
       "es6"
@@ -20,7 +20,6 @@
       "hammerjs",
       "jasmine",
       "node",
-      "protractor",
       "selenium-webdriver",
       "source-map",
       "uglify-js",
