--- a/package.json
+++ b/package.json
@@ -80,9 +80,11 @@
     "ie-shim": "^0.1.0",
     "leaflet": "^0.7.7",
     "leaflet-omnivore": "^0.3.2",
+    "lodash": "^4.17.2",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.2.0",
     "mdi": "^1.7.22",
+    "mdl-selectfield": "^1.0.4",
     "moment": "^2.14.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.26"
@@ -118,10 +120,12 @@
     "karma-remap-coverage": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
+    "node-sass": "^3.8.0",
     "parse5": "^2.2.2",
     "protractor": "^4.0.10",
     "raw-loader": "0.5.1",
     "rimraf": "~2.5.4",
+    "sass-loader": "^4.0.1",
     "script-ext-html-webpack-plugin": "^1.3.2",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "1.0.5",
@@ -139,10 +143,7 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "2.1.0-beta.11",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "~0.20.0",
-
-    "node-sass": "^3.8.0",
-    "sass-loader": "^4.0.1"
+    "webpack-merge": "~0.20.0"
   },
   "repository": {
     "type": "git",
