--- a/package.json
+++ b/package.json
@@ -69,10 +69,13 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@angular/router": "3.2.1",
+    "@angular2-mdl-ext/popover": "^0.4.1",
+    "@angular2-mdl-ext/select": "^0.8.0",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
     "@types/leaflet": "^1.0.38",
+    "angular2-mdl": "^2.9.0",
     "angularfire2": "^2.0.0-beta.5",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
@@ -84,7 +87,6 @@
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.2.0",
     "mdi": "^1.7.22",
-    "mdl-selectfield": "^1.0.4",
     "moment": "^2.14.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.26"
