chore : upgrade to angular2-webpack-starter 5.1.1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,7 @@
       "selenium-webdriver",
       "source-map",
       "uglify-js",
-      "webpack",
-      "leaflet",
-      "firebase"
+      "webpack"
     ]
   },
   "exclude": [
