--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "material-design-lite": "^1.2.0",
     "mdi": "^1.7.22",
     "moment": "^2.14.1",
+    "ng2-translate": "^5.0.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.26"
   },
