--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "jsrol-ng2",
   "version": "0.0.0",
   "license": "MIT",
-  "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,42 +22,42 @@
     "@angular/router": "^3.4.0",
     "@angular2-mdl-ext/popover": "^0.5.0",
     "@angular2-mdl-ext/select": "^0.8.1",
+    "@mapbox/leaflet-omnivore": "^0.3.4",
     "@ngx-translate/core": "^6.0.0",
     "@ngx-translate/http-loader": "0.0.3",
     "angular2-mdl": "^2.12.1",
-    "angularfire2": "^2.0.0-beta.7.1-pre",
+    "angularfire2": "2.0.0-beta.7.1-pre",
     "core-js": "^2.4.1",
     "firebase": "^3.6.9",
     "leaflet": "^0.7.7",
-    "leaflet-omnivore": "^0.3.2",
     "lodash": "^4.17.2",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.2.0",
     "mdi": "^1.8.36",
     "moment": "^2.14.1",
     "ng2-pagination": "^2.0.0",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "rxjs": "5.1.1",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-beta.31",
+    "@angular/cli": "1.0.0-rc.1",
     "@angular/compiler-cli": "^2.4.0",
     "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.0",
     "@types/leaflet": "^1.0.38",
-    "@types/lodash": "^4.14.52"
+    "@types/lodash": "^4.14.52",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~2.0.0",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.4.2",
+    "typescript": "~2.0.0"
   }
 }
