feat(browser): add reducer, actions and state for event list

--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "@angular-mdl/popover": "^0.6.3",
     "@angular-mdl/select": "^0.10.4",
     "@mapbox/leaflet-omnivore": "^0.3.4",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/devtools": "^1.4.0",
+    "@ngrx/effects": "^2.0.2",
+    "@ngrx/router-store": "^1.2.5",
+    "@ngrx/store": "^2.2.1",
+    "@ngrx/store-devtools": "^3.2.4",
     "@ngx-translate/core": "^6.0.0",
     "@ngx-translate/http-loader": "0.0.3",
     "@angular-mdl/core": "^4.0.1",
@@ -36,6 +42,7 @@
     "mdi": "^1.8.36",
     "moment": "^2.14.1",
     "ng2-pagination": "^2.0.0",
+    "reselect": "^3.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
